# VoxPoser

./: .gitignore  pyproject.toml  test_bed.py
src/: LMP.py  playground.ipynb  test_bed.py
src/voxposer/: LMP.py  controllers.py  interfaces.py  playground.ipynb  test_bed.py
src/voxposer/envs/: rlbench_env.py
