[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxposer"
version = "0.0.0"
description = "Packaging for Voxposer"
requires-python = ">=3.8"  # Minimum Python version required

# dependencies = [
#     "autogen",
#     "openai",
#     "httpx==0.27.2"
# ]

[project.optional-dependencies]
dev = ["black", "isort", "pytest", "pytest-xdist", "twine", "build"]